fixed the subscribe subtitle max-width for prevent word wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,7 +588,7 @@ a.btn:hover {
     color: #fff;
     font-size: 3.5rem;
     font-weight: 600;
-    /* line-height: 1.5; */
+    max-width: 520px;
 }
 
 .subscribe .info .desc {
